@@ -8,6 +8,7 @@
 	* Fixed issue #12531: Remove reference to extension patch1822
 	* Updated Manual
 	* Added missing files in SVN
+	* Fixed issue #12555: Removed db_layout configuration not supported on page 0
 
 2011-01-24  Stanislas Rolland  <typo3@sjbr.ca>
 
